--- a/project-1/myfirstlivesite.html
+++ b/project-1/myfirstlivesite.html
@@ -1,11 +1,10 @@
 <!DOCTYPEhtml>
 
-<h1>My First Live Site</h1>
-
+  <h1>Montana Troyer</h1>
+  <hr />
 <p>
-  <h2>Montana Troyer</h2> <br />
-  Risk by Anais Nin<br />
-<hr />
+  <h2>Risk by Anais Nin</h2>
+   <hr />
   And then the day came, <br />
   when the risk<br />
   to remain tight<br />
