--- a/assignment-4/index.html
+++ b/assignment-4/index.html
@@ -12,6 +12,9 @@
 
   <body>
 
+  <form
+  action="https://example.com/registration.php" method="get" id="registration-form" class="basic-form">
+
   <p><h2>Pine Park Center Kids Kamp</h2></p>
   <p><i>Summer Program for Kids Aged 3-15 Years</i></p>
 
@@ -157,9 +160,6 @@
         <td></td>
     </tr>
 
-    <form
-    action="https://example.com/registration.php"
-      method="post"
     <fieldset>
 
     <br />
@@ -206,5 +206,6 @@
     Kampers share stories while learning traditional outdoor cooking.
   </figcaption>
   <br />
+  </form>
     </body>
 </html>
