--- a/assignment-5/index.html
+++ b/assignment-5/index.html
@@ -43,9 +43,8 @@
       <h2>Music Video</h2>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/eBG7P-K-r1Y" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>"
     </div>
-    <div id="lyrics" class="container">
+    <div id="lyrics" class="container lyrics">
       <h2>Lyrics</h2>
-      <p id="Everlong Lyrics" class="class-name-2">
           Hello
           <br />
           I've waited here for you
@@ -124,20 +123,17 @@
           <br />
           You've got to promise not to stop when I say when
           <br />
-        <p/>
     </div>
-    <div id="copyright" class="container">
+    <div id="copyright" class="container contact">
       <h2>Copyright</h2>
       All provided media is &#169; Foo Fighters.
       <br />
-      This site was produced for the class "Introduction to Web Design & Development" with the University of Montana, School of Media Arts, and does not profit from any use of said media.
-      <p id="Contact" class="second">
+      This site was produced for the class "Introduction to Web Design & Development" with the University of Montana, School of Media Arts, and does not profit from <br /> any use of said media.
         <h2>Contact</h2>
-        University of Montana
-        School of Media Arts, McGill Hall Rm 127
-        32 Campus Dr
-        Missoula, MT 59812
-      </p>
+        University of Montana <br />
+        School of Media Arts, McGill Hall Rm 127 <br />
+        32 Campus Dr <br />
+        Missoula, MT 59812 <br />
     </div>
 <video poster="./Images/mart-logo-poster.mp4" width="400" height="320" preload controls loop>
   <source src="./Media/mart-logo-animated.mp4" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"' />
