--- a/project-2/pages/about.html
+++ b/project-2/pages/about.html
@@ -8,10 +8,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
     body {
- background-color: red;
- text-align: center;
+ background-color: blue;
+ text-align: left;
+}
+.About p, pre{
+   font-size:medium; font-family:times;
+  }
+
+.container {
+ background-color: white;
+ width: 600px;
+ margin: auto;
+ padding: 20px;
+ border: 1px solid black;
 }
   </style>
   </head>
-
   <body>
+    <nav>
+      <a href="../index.html">Home</a>
+      <a href="./about.html">About</a>
+      <a href="./contact.html">Contact</a>
+    </nav>
+  <div id="About" class="container">
+  <h2>About Me</h2>
+  <p></p>
+  I got an interest in lock picking when I found a lock picking set in my car many years ago. I've been trying to learn on and off for many years and am finally getting a grasp on it.
+  <p></p>
+  There are a few ways of picking a master lock. There's racking, which is the beginner method; easiest to understand, but less reliable. There's also single picking, where you push each pin up in the lock seperately. This is a lot harder to learn, but more reliable once you get it down.
+  <p></p>
+  There are many great videos on line about lock picking, but here's one I found helpful.
+  <p></p>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/Mz5IOFK38nU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center>
+</div>
+<div id="location" class="container">
+  For more information email: <a href="mailto:montana.troyer@umconnect.umt.edu">montana.troyer@umconnect.umt.edu</a><br />
+<p></p>
+  To get the actual lock picking set you have to use <a hred="https://www.amazon.com/Paraponera-Practise-Kit-Set-32PCS/dp/B07DFFXYJN/ref=sr_1_5?ie=UTF8&qid=1529634988&sr=8-5&keywords=lock+picking+kit">Amazon</a> or another online website.
+  Walmart is a great place to find a cheep master lock to try this out.
+  <p></p>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3195.018101950615!2d-76.12486698465148!3d36.794116375741666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89babfb0da7ec09f%3A0x9e10cbabda78ec0f!2sWalmart+Supercenter!5e0!3m2!1sen!2sus!4v1529635584990" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
+  </body>
