--- a/assignment-6/index.html
+++ b/assignment-6/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="square" id="purple">
-      <img src="./images/princealbum.jpg" alt="80sbands" title="Prince" class="align-left" id="albumcovers" />
+      <img src="./images/princealbum.jpg" alt="80sbands" title="Prince" class="align-left-bottom" id="albumcovers" />
     </div>
 
     <div class="square" id="blue">
